<resources>
    <string name="app_name">weebchat</string>
    <string name="title">Weebchat</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="cd_umaru">its umaru my guy</string>
    <string name="confirm_password">Confirm password</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="select_photo">Select\nphoto</string>
    <string name="cd_select_profile_photo">Select profile photo button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_new_message">Create New Message</string>
    <string name="sign_out">Sign Out</string>
    <string name="messages">Messages</string>
    <string name="select_user">Select User</string>
    <string name="cd_profile_photo">profile photo</string>
    <string name="cd_send_button">Send button</string>
    <string name="enter_message">Enter Message</string>
    <string name="cd_from_photo">sender profile photo</string>
    <string name="chat_log_title">Chat Log</string>
</resources>